--- a/estilos/style.css
+++ b/estilos/style.css
@@ -28,3 +28,10 @@ section#telefone{
     background: url('../imagens/frame-iphone.png');
     background-repeat: no-repeat;
 }
+iframe#tela{
+    position: relative;
+    top: 81px;
+    left: 22px;
+    width: 269px;
+    height: 471px;
+}
