--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,37 +1,35 @@
-@charset "UTF-8";
-
 *{
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
 }
-html, body{
-    height: 100vh;
+body,html{
     width: 100vw;
-    background: url('../imagens/fundo-madeira.jpg') no-repeat top center;
+    height: 100vh;
+    background: green url('/imagens/fundo-madeira.jpg') no-repeat top center;
     background-size: cover;
-    background-attachment: fixed;
+    font-family: Arial, Helvetica, sans-serif;
+    
 }
 main{
     position: relative;
-    height: 100vh;
+    height:100vh;
 
 }
 section#telefone{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
-    height: 627px;
+    transform: translate(-50%,-50%);
     width: 311px;
-    background-color: blue;
-    background: url('../imagens/frame-iphone.png');
-    background-repeat: no-repeat;
+    height: 627px;
+    background:  url('/imagens/frame-iphone.png') no-repeat;
+    background-size: cover;
 }
 iframe#tela{
-    position: relative;
+    position: absolute;
     top: 81px;
-    left: 22px;
-    width: 269px;
-    height: 471px;
+    left: 23px;
+    width: 268px;
+    height: 470px;
+
 }
