--- a/estilos/style.css
+++ b/estilos/style.css
@@ -29,7 +29,24 @@ iframe#tela{
     position: absolute;
     top: 81px;
     left: 23px;
-    width: 268px;
-    height: 470px;
+    width: 267px;
+    height: 471px;
 
+}
+section#redes-sociais {
+    text-align: right;
+}
+section#redes-sociais > a > img{
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.397);
+    box-sizing: border-box ;
+    
+}
+section#redes-sociais > a > img:hover{
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.253);
+    border: 2px solid rgba(255, 255, 255, 0.616);
+    transition: transform 0.3s, border 0.5s;
 }
